add fcoin order's api